<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/nature"
    >

    <ImageView
        android:id="@+id/weather_image"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_city"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/forecast_weather"
        android:text="@string/forecast_weather"
        android:textColor="@color/cardview_light_background"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/WeatherAppCityStyle"
        android:id="@+id/text_view_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/WeatherAppTempStyle"
        android:id="@+id/text_view_temp"
        android:layout_below="@+id/weather_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:orientation="vertical"
        android:layout_below="@+id/text_view_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/WeatherAppDescriptionStyle"
            android:id="@+id/text_view_description"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/humidity"
            style="@style/ColorOfText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/text_view_humidity"
            style="@style/WeatherAppHumidityStyle"
            android:layout_gravity="center|center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="90dp"
            android:layout_gravity="center"
            android:text="Choose your country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_text_country"
            android:hint="your country"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar"
        android:id="@+id/progress_load_bar"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        style="@style/WeatherAppRefreshButtonStyle"
        android:id="@+id/refresh_button"
        android:background="@drawable/btn_next_gradient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>