<resources>
    <string name="app_name">AndroidThree</string>
    <string name="intro_name_1">В данном приложении вы можете учиться</string>
    <string name="intro_name_2">В данном приложении вы можете обновить</string>
    <string name="intro_name_3">В данном приложении вы можете удалять</string>
    <string name="intro_name_4">Спасибо что используете наше приложение</string>
    <string name="temp">10°C</string>
    <string name="description">Description</string>
    <string name="humidity">Humidity:</string>
    <string name="city">Weather in</string>
    <string name="refreshButton">Search</string>
    <string name="forecast_weather">16 days forecast</string>
    <string name="bottom_sheet_location">This is location bottom sheet.</string>
    <string name="bottom_sheet_duration">duration</string>
    <string name="bottom_sheet_distance">distance</string>
</resources>
